i have added driver and dispacher page and updated the user page also. the dispacher will help us to manage the where houses,drivers and deliveries so that it can reach on the client safe.

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -16,7 +16,7 @@
                 id="{{ field.id_for_label }}" type="{{ field.field.widget.input_type }}" name="{{ field.name }}" {% if
                 field.value %}value="{{ field.value }}" {% endif %}>
             {% if field.help_text %}
-            <p class="text-gray-600 text-xs italic">{{ field.help_text }}</p>
+            <p class="text-red-600 font-bold text-xs italic">{{ field.help_text }}</p>
             {% endif %}
         </div>
         {% endfor %}
