--- a/templates/accounts/login_v3.html
+++ b/templates/accounts/login_v3.html
@@ -17,12 +17,13 @@
         </div>
         {% endfor %}
         <button type="submit"
-            class="w-full bg-blue-600 text-white font-bold py-2 px-4 rounded hover:bg-blue-700 focus:outline-none focus:shadow-outline">
+            class="w-full bg-green-900 text-white font-bold py-2 px-4 rounded hover:bg-green-800 focus:outline-none focus:shadow-outline">
             Login
         </button>
     </form>
     <p class="mt-4 text-center">
-        Don't have an account? <a href="{% url 'register' %}" class="text-blue-600 hover:underline">Register here</a>
+        Don't have an account? <a href="{% url 'register' %}" class="text-green-900 font-bold hover:underline">Register
+            here</a>
     </p>
 </div>
 {% endblock %}
