--- a/templates/logistics/admin_drivers.html
+++ b/templates/logistics/admin_drivers.html
@@ -3,8 +3,10 @@
 {% block content %}
 <div class="mb-8 flex justify-between items-center">
     <h1 class="text-2xl font-bold text-gray-800">Drivers Management</h1>
-    <button class="bg-red-600 hover:bg-red-700 text-white px-6 py-2 rounded-lg shadow font-bold transition">Add New
-        Driver</button>
+    <a href="{% url 'add_user' %}"
+        class="bg-green-900 hover:bg-green-800 text-white px-6 py-2 rounded-lg shadow font-bold transition">
+        Add New Driver
+    </a>
 </div>
 
 <div class="bg-white rounded-xl shadow-sm overflow-hidden border border-gray-100">
