--- a/templates/logistics/dashboard_v2.html
+++ b/templates/logistics/dashboard_v2.html
@@ -54,7 +54,7 @@
     </div>
 
     <div class="flex items-center space-x-4">
-        <button class="bg-red-500 hover:bg-red-600 text-white px-6 py-2 rounded shadow text-sm font-bold">Add
+        <button class="bg-red-500 hover:bg-red-600 text-white px-6 py-2 rounded shadow text-sm font-bold" onclick="location.href='{% url 'create_shipment' %}';">Add
             New</button>
         <div class="relative">
             <input type="text" placeholder="Search"
