--- a/templates/logistics/admin_deliveries.html
+++ b/templates/logistics/admin_deliveries.html
@@ -1,4 +1,4 @@
-{% extends 'base_v2.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
 <div class="mb-8 flex justify-between items-center">
