--- a/templates/logistics/coming_soon.html
+++ b/templates/logistics/coming_soon.html
@@ -1,4 +1,4 @@
-{% extends 'base_v2.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
 <div class="flex flex-col items-center justify-center min-h-[60vh] text-center">
