--- a/templates/logistics/dispatcher_deliveries.html
+++ b/templates/logistics/dispatcher_deliveries.html
@@ -1,4 +1,4 @@
-{% extends 'base_v2.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
