--- a/templates/logistics/dispatcher_warehouses.html
+++ b/templates/logistics/dispatcher_warehouses.html
@@ -1,4 +1,4 @@
-{% extends 'base_v2.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
 <div class="flex justify-between items-center mb-8">
