--- a/templates/logistics/edit_user.html
+++ b/templates/logistics/edit_user.html
@@ -1,4 +1,4 @@
-{% extends 'base_v2.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
 <div class="max-w-2xl mx-auto bg-white p-8 rounded-xl shadow-sm border border-gray-100">
